--- a/products.html
+++ b/products.html
@@ -6,6 +6,9 @@
     <title>Products</title>
     <link href="css/bootstrap.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link href="style.css" rel="stylesheet">
 </head>
 <body>
@@ -16,22 +19,20 @@
   </div>
   <nav id="navbar" class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">
-        <img src="/docs/5.2/assets/brand/bootstrap-logo.svg" alt="Bootstrap" width="30" height="24">
-      </a>
+      <img class="brand" src="img/icon.png" alt="Icon">
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link" onclick="patchAPI();delay('index.html');">Home</a>
+            <a class="nav-link" onclick="patchAPI();delay('index.html');">HOME</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page">Products</a>
+            <a class="nav-link active" aria-current="page">PRODUCTS</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" onclick="patchAPI();delay('cart.html');">Cart</a>
+            <a class="nav-link" onclick="patchAPI();delay('cart.html');">CART</a>
           </li>
       </div>
     </div>
@@ -40,7 +41,7 @@
     <div class="row productHeader">
       <div class="col">
         <div class="productTitle">
-          <h1>Our Products</h1>
+          <h1>OUR PRODUCTS</h1>
         </div>
         <div class="filters text-start">
           <label for="cat">Categories:</label>
@@ -65,6 +66,17 @@
       
     </div>
   </div>
+  <footer id="foot">
+    <div>
+      <img class="brand" src="img/icon.png" alt="Icon">
+      <span>&copy; 2024, Star Jewelry Inc.</span>
+    </div>
+    <div class="socmed">
+      <a href="index.html"><img src="img/fb.png"></a> 
+      <a href="index.html"><img src="img/insta.png"></a> 
+      <a href="index.html"><img src="img/twt.png"></a> 
+    </div>
+  </footer>
   <script src="js/bootstrap.bundle.js"></script>
   <script src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs" type="module"></script>
   <script src="script.js"></script>
