--- a/Wheel.html
+++ b/Wheel.html
@@ -5,11 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Wheel</title>
     <link href="css/bootstrap.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link href="wheelstyle.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
 </head>
 <body>
   <canvas id="wheelCanvas" width="500" height="500"></canvas>
-  <button id="spin-button">Spin for your prize!</button>
+  <div class="spin-text">
+    <h3>Spin to win attractive prizes!</h3>
+    <button id="spin-button" type="button" class="btn btn-outline-dark btn-lg">SPIN</button>
+  </div>
     <!-- Chart JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.9.1/chart.min.js"></script>
     <!-- Chart JS Plugin for displaying text over chart -->
