--- a/cart.html
+++ b/cart.html
@@ -34,6 +34,9 @@
           <li class="nav-item">
             <a class="nav-link active" aria-current="page">CART</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" onclick="patchAPI();delay('leaderboard.html');">LEADERBOARD</a>
+        </li>
       </div>
     </div>
   </nav>
