--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="cart.html">CART</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="leaderboard.html">LEADERBOARD</a>
+            </li>
           </div>
         </div>
       </nav>
