--- a/leaderboardform.html
+++ b/leaderboardform.html
@@ -84,6 +84,6 @@
 
   <script src="js/bootstrap.bundle.js"></script>
   <script src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs" type="module"></script>
-  <script src="leaderboard.js" defer></script>
+  <script src="leaderboardform.js" defer></script>
 </body>
 </html>
