--- a/products.html
+++ b/products.html
@@ -82,6 +82,6 @@
   </footer>
   <script src="js/bootstrap.bundle.js"></script>
   <script src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs" type="module"></script>
-  <script src="script.js"></script>
+  <script src="products.js"></script>
 </body>
 </html>
