--- a/products.html
+++ b/products.html
@@ -26,16 +26,16 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link" onclick="patchAPI();delay('index.html');">HOME</a>
+            <a class="nav-link" onclick="patchAPI('index.html');">HOME</a>
           </li>
           <li class="nav-item">
             <a class="nav-link active" aria-current="page">PRODUCTS</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" onclick="patchAPI();delay('cart.html');">CART</a>
+            <a class="nav-link" onclick="patchAPI('cart.html');">CART</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" onclick="patchAPI();delay('leaderboard.html');">LEADERBOARD</a>
+            <a class="nav-link" onclick="patchAPI('leaderboard.html');">LEADERBOARD</a>
         </li>
       </div>
     </div>
