--- a/quiz.html
+++ b/quiz.html
@@ -23,6 +23,7 @@
         </div>
     </div>
 <!-- Script -->
+<script src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs" type="module"></script>
 <script src="quizjava.js"></script>
 </body>
 </html>
