--- a/index.html
+++ b/index.html
@@ -100,6 +100,6 @@
           <a href="index.html"><img src="img/twt.png"></a> 
         </div>
       </footer>
-    <script src="js/bootstrap.bundle.js"></script>
+    <script src="js/bootstrap/bootstrap.bundle.js"></script>
 </body>
 </html>
